--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,7 +46,7 @@ h6 {
 # Secciones - Texto Principal - Separador - Subtitulo
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 75px 0;
   overflow: hidden;
 }
 
@@ -266,7 +266,7 @@ section {
 }
 
 section {
-  scroll-margin-top: 70px;
+  scroll-margin-top: 80px;
 }
 
 /*--------------------------------------------------------------
@@ -778,12 +778,20 @@ section {
 
 .testimonials .testimonial-item {
   box-sizing: content-box;
-  padding: 30px;
+  padding: 10px;
   margin: 30px 10px;
   box-shadow: 0px 0 15px rgba(0, 0, 0, 0.1);
   position: relative;
   background: #fff;
   border-radius: 10px;
+  border: 1px solid blue;
+}
+
+.div1 {
+  width: 300px;
+  height: auto;
+  padding: 10px;
+  border: 1px solid blue;
 }
 
 .testimonials .testimonial-item .testimonial-img {
@@ -916,7 +924,7 @@ section {
 .portfolio .portfolio-wrap {
   box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  height: 100%;
+  height: 75%;
   overflow: hidden;
 }
 
