--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -736,7 +736,7 @@ section {
   margin-bottom: 50px;
 }
 
-.services .service-item .icon i {
+.services .service-item .icon img {
   color: var(--color-default);
   font-size: 56px;
   transition: ease-in-out 0.3s;
@@ -782,7 +782,7 @@ section {
 }
 
 .services .service-item:hover .icon:before {
-  background: #00b6a1;
+  background: #eeec6a; 
 }
 
 .services .service-item:hover h3 {
