--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,17 +1,34 @@
- 
 /*--------------------------------------------------------------
-# ELemento raiz con variables para Colores y Fuentes 
-# y comportamiento del desplazamiento/scroll
---------------------------------------------------------------*/
+# INDICE CSS
+#  1. Global                                               
+#  2. General                                               
+#  3. Secciones - Texto Principal - Separador - Subtitulo   
+#  4. Boton ir arriba                                      
+#  5. Carga Pagina  
+#  6. Header  
+#  7. Sección Sobre Nosotros  
+#  8. Sección Significado Flores 
+#  9. Sección Productos  
+# 10. Sección Categorías Inicio 
+# 11. Sección Preguntas Frecuentes (faq)  
+# 12. Seccion contacto  
+# 13. Seccion Carrusel
+# 14. Footer
+--------------------------------------------------------------*/ 
 
+
+/*--------------------------------------------------------------
+# 1. GLOBAL
+--------------------------------------------------------------*/
 :root {
-  scroll-behavior: smooth;
+  /*variables para Colores y Fuentes*/
   --color-default: #222222;
   --color-primary: #e9b6af;
   --color-secondary: #3e6280;
   --font-primary: "Montserrat", sans-serif;
   --font-secondary: "Poppins", sans-serif;
   --font-default: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  scroll-behavior: smooth; /*comportamiento del desplazamiento/scroll*/
 }
 
 @font-face {
@@ -37,7 +54,7 @@
 }
 
 /*--------------------------------------------------------------
-# General
+# 2. General
 --------------------------------------------------------------*/
 body {
   font-family: var(--font-default);
@@ -64,7 +81,7 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Secciones - Texto Principal - Separador - Subtitulo
+# 3. Secciones - Texto Principal - Separador - Subtitulo
 --------------------------------------------------------------*/
 section {
   padding: 75px 0;
@@ -108,7 +125,7 @@ section {
  
 
 /*--------------------------------------------------------------
-# Boton ir arriba
+# 4. Boton ir arriba
 --------------------------------------------------------------*/
 .scroll-top {
   position: fixed;
@@ -142,7 +159,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Carga Pagina / Loader
+# 5. Carga Pagina / Loader
 --------------------------------------------------------------*/
 #preloader {
   position: fixed;
@@ -187,9 +204,6 @@ section {
   }
 }
 
-/*--------------------------------------------------------------
-# Disable aos animation delay on mobile devices
---------------------------------------------------------------*/
 @media screen and (max-width: 768px) {
   [data-aos-delay] {
     transition-delay: 0 !important;
@@ -197,7 +211,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Header
+# 6. Header
 --------------------------------------------------------------*/
 .topbar {
   background: #db9f98;
@@ -295,33 +309,9 @@ section {
   scroll-margin-top: 80px;
 }
 
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-height: 75px;
-width: 100px;
-/*outline: black;
-background-size: 100%, 100%;
-border-radius: 50%;
-border: 1px solid black;*/
-background-image: none;
-}
 
-.carousel-control-next-icon:after
-{
-content: '>';
-font-size: 60px;
-font-weight: bold;
-}
 
-.carousel-control-prev-icon:after {
-content: '<';
-font-size: 55px;
-font-weight: bold;
-}
-
-/*--------------------------------------------------------------
-# Desktop Navigation
---------------------------------------------------------------*/
+/* navegacion escritorio */
 @media (min-width: 1280px) {
   .navbar {
     padding: 0;
@@ -470,9 +460,7 @@ font-weight: bold;
   }
 }
 
-/*--------------------------------------------------------------
-# Mobile Navigation
---------------------------------------------------------------*/
+/*navegacion movil*/
 @media (max-width: 1279px) {
   .navbar {
     position: fixed;
@@ -595,7 +583,7 @@ font-weight: bold;
 }
 
 /*--------------------------------------------------------------
-# Sección Sobre Nosotros
+# 7. Sección Sobre Nosotros
 --------------------------------------------------------------*/
 .about h3 {
   font-weight: 700;
@@ -658,10 +646,8 @@ font-weight: bold;
   margin-bottom: 0;
 }
 
- 
- 
 /*--------------------------------------------------------------
-# Sección Significado Flores
+# 8. Sección Significado Flores
 --------------------------------------------------------------*/
 .services {
   padding: 60px 0;
@@ -735,7 +721,7 @@ font-weight: bold;
 }
  
 /*--------------------------------------------------------------
-# Sección Productos
+# 9. Sección Productos
 --------------------------------------------------------------*/
 .portfolio .portfolio-flters {
   padding: 0 0 20px 0;
@@ -824,7 +810,7 @@ font-weight: bold;
 
 
 /*--------------------------------------------------------------
-# Sección Categorías Inicio
+# 10. Sección Categorías Inicio
 --------------------------------------------------------------*/
 .team {
 margin-top: 50px;
@@ -902,7 +888,7 @@ margin-top: 50px;
  
 
 /*--------------------------------------------------------------
-# Sección Preguntas Frecuentes (faq)
+# 11. Sección Preguntas Frecuentes (faq)
 --------------------------------------------------------------*/
 .faq .content h3 {
   font-weight: 400;
@@ -976,7 +962,7 @@ margin-top: 50px;
 }
  
 /*--------------------------------------------------------------
-# Contact Section
+# 12. Seccion contacto
 --------------------------------------------------------------*/
 .contact .info-container {
   
@@ -1150,13 +1136,33 @@ margin-top: 50px;
 }
 
 /*--------------------------------------------------------------
-# Hero Section
+# 13. Seccion Carrusel
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
   position: relative;
   background: #f3f3f3;
   padding: 90px;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+height: 75px;
+width: 100px;
+background-image: none;
+}
+
+.carousel-control-next-icon:after
+{
+content: '>';
+font-size: 60px;
+font-weight: bold;
+}
+
+.carousel-control-prev-icon:after {
+content: '<';
+font-size: 55px;
+font-weight: bold;
 }
 
 @media (min-width: 1365px) {
@@ -1178,54 +1184,12 @@ margin-top: 50px;
   margin-bottom: 30px;
 }
 
-.hero .btn-get-started {
-  font-family: var(--font-primary);
-  font-weight: 500;
-  font-size: 15px;
-  letter-spacing: 1px;
-  display: inline-block;
-  padding: 14px 40px;
-  border-radius: 50px;
-  transition: 0.3s;
-  color: #000000;
-  background: rgba(242, 0, 0, 0.1);
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
-  border: 2px solid rgba(203, 0, 0, 0.1);
-}
-
-.hero .btn-get-started:hover {
-  border-color: rgba(255, 255, 255, 0.5);
-}
-
-.hero .btn-watch-video {
-  font-size: 16px;
-  transition: 0.5s;
-  margin-left: 25px;
-  color: rgb(0, 0, 0);
-  font-weight: 600;
-}
-
-.hero .btn-watch-video i {
-  color: rgba(255, 0, 0, 0.5);
-  font-size: 32px;
-  transition: 0.3s;
-  line-height: 0;
-  margin-right: 8px;
-}
-
-.hero .btn-watch-video:hover i {
-  color: #fff;
-}
-
+ 
 @media (max-width: 640px) {
   .hero h2 {
     font-size: 36px;
   }
-
-  .hero .btn-get-started,
-  .hero .btn-watch-video {
-    font-size: 14px;
-  }
+ 
 }
 
 .hero .icon-boxes {
@@ -1289,7 +1253,7 @@ margin-top: 50px;
 }
  
 /*--------------------------------------------------------------
-# Footer
+# 14. Footer
 --------------------------------------------------------------*/
 .footer {
   font-size: 14px;
